Fix overflow of product content

--- a/assets/css/product/product-desription.css
+++ b/assets/css/product/product-desription.css
@@ -1,7 +1,8 @@
 .product__description {
-  margin: 0;
-  width: fit-content;
+  color: var(--text-color);
   font-weight: 500;
   font-family: var(--text-font);
-  color: var(--text-color);
+  margin: 0;
+  width: fit-content;
+  word-wrap: break-word;
 }
