--- a/assets/css/product/product.css
+++ b/assets/css/product/product.css
@@ -6,4 +6,5 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem 0;
+  width: 165px;
 }
